# clamav-api

./: .cz.toml  .gitignore  .markdownlint.json  .pre-commit-config.yaml  Dockerfile  README.md  entrypoint.sh  main.py  pyproject.toml
.github/workflows/: cz-bump.yml  pre-commit.yml  verify-and-update.yml
app/: app.py
app/clamav/: instream.py  ping.py  version.py
app/requirements/: base.txt  test.txt
app/swagger/: swagger.yaml
clamav/: __init__.py  models.py
clamav/api/: instream.py  ping.py  version.py
requirements/: base.txt  test.txt
