[tool.poetry]
name = "clamav-api"
version = "1.1.0"
description = "HTTP API on a clamd instance."
authors = ["PsypherPunk <psypherpunk@gmail.com>"]
license = "MPL-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
anyio = "^4.4.0"
fastapi = "^0.111.1"
uvicorn = {extras = ["standard"], version = "^0.30.3"}

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"
commitizen = "^3.28.0"
black = "^24.4.2"

[tool.commitizen]
version = "1.1.0"
bump_message = "bump: version $current_version → $new_version [skip ci]"
version_files = [
    "pwny/__init__.py:^__version__",
    "pyproject.toml:^version",
]

[tool.commitizen.customize]
bump_pattern = '^(BREAKING CHANGE|build|chore|docs|feat|fix|refactor|test)(\(.+\))?(!)?'
bump_map = {"!" = "MAJOR", build = "PATCH", chore = "PATCH", docs = "PATCH", feat = "MINOR", fix = "PATCH", refactor = "PATCH", test = "PATCH" }

[tool.markdownlint]
MD013 = { "code_blocks" = false, "heading_line_length" = 100, tables = false }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
